--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
+<!doctype html>
 
+<html lang="fr">
+<head>
+	<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+	<title>Boutique Bonnes Ondes</title>
+</head>
+<body>
+	  <header>
+  <h1>L'eShop de Bonnes ondes </h1>
+  </header>
+<nav>
+<ul>
+<li> <a href="#instruments">Instruments de musique</a></li>
+	<ul>
+     <li> <a href="#cordes"> Instruments à cordes </a> </li>
+     <li> <a href="#vents"> Intruments à vent </a></li>
+  </ul>
+
+<li> <a href="#accessoires">Les accessoires</a></li>
+     <ul>
+        <li> <a href="#metronome">Les métronomes</a> </li>
+        <li> <a href="#diapason">Les diapasons</a></li>
+     </ul>
+</ul>
+
+</nav>
+
+<section>
+	<h2 id="instruments"> Les instruments de musique</h2>
+         <h3 id="cordes"> Les instruments à cordes </h3>
+
+                       <h4 id="violons">Les violons</h4>
+
+<p>Tous nos <b> <a href="https://fr.wikipedia.org/wiki/Violon">violons</a></b> ont été réglés par nos <b><a href="https://fr.wikipedia.org/wiki/Luthier">luthiers</a></b> et sont prêts à jouer.
+</p>
+
+<ol>
+<li><img src="https://cdn.pixabay.com/photo/2015/09/05/12/53/violin-924349_1280.jpg"
+alt="Violon entier"
+title="violon entier d'étude">
+violon d'étude Vendome
+Très beau violon entier</li>
+
+
+<li><img src="https://m.media-amazon.com/images/I/713cyMah3NL._AC_SY355_.jpg"
+alt ="violon trois quart"
+title ="violon d'étude trois quarts">
+Stentor Student Standard Violon trois quart
+Violon d"étude trois quarts : pour enfant entre 9 et 12 ans, environ 1m35 à 1m50</li>
+
+<!--Comme dans la base pmb j'ai mis des liens issus d'amazon comme vignettes d'illustation. Les images libres de droit comme Pixabay etant trop peu nombreuses ou pas assez explicites  -->
+
+</ol>
+
+
+				<h4 id="guitares">Les guitares</h4>
+
+
+<p>Nos  <b><a href="https://fr.wikipedia.org/wiki/Guitare">guitares</a></b> ont toutes été produites en France.
+Les guitares acoustiques sont celles qui ont le son le plus profond.</p>
+
+	<ol>
+<li><img src="https://cdn.pixabay.com/photo/2010/12/13/10/01/guitar-2119_1280.jpg"
+alt="Guitare acoustique vernie"
+title="Guitare acoustique">Guitare acoustique</li>
+
+<li><img src="https://m.media-amazon.com/images/I/61wY4--A4GL._AC_UL480_FMwebp_QL65_.jpg"
+alt="Guitare électrique noire et balnche"
+Title="Guitare éléctrique">Guitare électrique</li>
+
+</ol>
+
+
+
+
+         <h3 id="vents"> Les instruments à vent </h3>
+<p>Nos <b><a href="https://fr.wikipedia.org/wiki/Instrument_a_vent">instruments à vent</a></b> sont soigneusement sélectionnés.</p>
+
+<ol type=1>
+<li><img src="https://m.media-amazon.com/images/I/51FmcTU48yL._AC_SY355_.jpg"
+alt="clarinette noire sur fond blanc"
+title="Clarinette noire 17 clés"><a href="https://fr.wikipedia.org/wiki/Clarinette">Clarinette</a> en bakélite plaqué nickel, 17 clés en Si♭, soprano.</li>
+
+<li> <img src="https://m.media-amazon.com/images/I/51DyIHKTj0L._AC_SY355_.jpg "
+	alt="Flûte traversière en cuivre blanc"
+	Title="Flûte traversière en Do 16 clés"><a href="https://fr.wikipedia.org/wiki/Flute_traversiere">Flûte traversière</a> en Do 16 clés, instrument d'étude en cuivre blanc avec étui de transport, chiffon de nettoyage, pour débutant, orchestre d'école, clé de sol ergonomique décalée </li>
+
+<li><img src="https://m.media-amazon.com/images/I/61Gx+zzrSrL._AC_SY355_.jpg"
+alt="saxophone noir et or"
+Title="Saxophone Mib">
+<a href="https://fr.wikipedia.org/wiki/Saxophone">Saxophone</a> Mi bémol Alto en laiton laqué doré 82Z </li>
+
+ </ol>
+
+</section>
+
+
+<section>
+	<h2 id=	accessoires>Les accessoires</h2>
+
+<h3 id="metronome">Les métronomes</h3>
+
+<p>Les <b><a href="https://fr.wikipedia.org/wiki/Metronome">métronomes</a></b> sont indispensables pour travailler les morceaux de musique. Nous vendons les classiques métronomes mécaniques ainsi que des métronomes électroniques.</p>
+
+	<img src="https://cdn.pixabay.com/photo/2016/08/12/12/56/metronome-1588408_1280.jpg"
+	alt=" Deux métronome mécanique à balancier, un noir et un blanc" 
+	title="Métronomes mécaniques noir et blanc">
+
+
+
+	<h4><b>Métronome mécanique</b></h4>
+
+	<ol type=1>
+
+	<li><img src="https://m.media-amazon.com/images/I/71mNJZ0i0TL._AC_SY300_SX300_QL70_ML2_.jpg"
+alt="Métronome Pacato"
+title="Métronome Pacato">Métronome mécanique de marque Pacato : robuste et précis, il reste un indémodable</li>
+	<li><img src="https://m.media-amazon.com/images/I/61kumyY0T4L._AC_SX355_.jpg"
+alt="Métronome Taktell Piccolo de couleur turquoise"
+title="Métronome Taktell Piccolo"> Métronome Taktell Piccolo : robuste, sa couleur vive ajoute une touche de modernité </li>
+
+	</ol>
+
+
+	<h4><b>Métronome électronique</b></h4>
+
+<ol type=1>
+<li> <img src="https://m.media-amazon.com/images/I/71Ug2K0mZ2L._AC_SX355_.jpg"
+alt="Métronome à quartze de couleur noire"
+title="Métronome à quartz">Wittner MT-50 Métronome à quartz : ce métronome à quartz fait aussi diapason. Il est considéré comme l'un des meilleur de sa gamme </li>
+<li><img src="https://m.media-amazon.com/images/I/71Au795kkqL._AC_SY355_.jpg"
+alt="Métronome accordeur numérique"
+Title= "Métronome numérique accordeur"> Métronome Accordeur numérique, 3 en 1 : Accordeur, métronome numérique et générateur de tons pour guitare, basse, ukulélé, violon, banjo, saxophone, trompette, flûte, etc... </li>
+
+
+</ol>
+
+<h3 id="diapason">Les diapasons</h3>
+<p>Accessoire indispensable du violoniste ou du chanteur, le <b><a href="https://fr.wikipedia.org/wiki/Diapason">diapason</a></b> se glisse facilement partout, pour une note parfaite ! </p>
+<img src="https://cdn.pixabay.com/photo/2016/12/14/13/33/tuning-fork-1906403_1280.jpg"
+alt="Deux diapasons en métal sur fond bleu"
+title="deux diapasons en métal">
+<ol type=1>
+<li><img src="https://m.media-amazon.com/images/I/61378Id4OqL._AC_SY355_.jpg"
+alt="Diapason en acier"
+Title="Diapason en acier 440 Hz"> Diapason Pour Piano: Diapason en Acier Inoxydable A440 <abbr title="Hertz">Hz</abbr>, pour instrument musical standard notammentpour accordeur de Guitare et Violon.  </li>
+
+<li><img src="https://m.media-amazon.com/images/I/61sUUsT+aRL._AC_SY355_.jpg"
+alt="Diapason bleu"
+title="Diapason de coulour bleue 440Hz"> Diapason John Walker A440 <abbr title="Hertz">Hz</abbr>: Diapason en acier inoxydable de couleur bleue.</li>
+
+</ol>
+
+</section>
+
+<footer>
+<div>
+<b>Bonnes ondes</b> est une entreprise française originaire de Charente Maritime.
+Nous livrons dans toute l'Union Européenne.
+
+</div>
+
+
+</footer>
+</body>
+
+</html>
