--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </header>
 <nav>
 <ul>
+<li> <a href="#livres">Livres autour de la musique</a></li>	
 <li> <a href="#instruments">Instruments de musique</a></li>
 	<ul>
      <li> <a href="#cordes"> Instruments à cordes </a> </li>
@@ -29,6 +30,37 @@
 </nav>
 
 <section>
+
+	<h2 id="livres"> Nos livres autour de la musique</h2>
+
+
+
+<p>
+<span class='Z3988' title='url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=urn%3Aisbn%3A978-2-35284-068-8&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Abook&amp;rft.genre=book&amp;rft.btitle=Fr%C3%A9d%C3%A9ric%20Chopin%20%3B%20l&apos;%C3%A2me%20du%20piano&amp;rft.place=Paris&amp;rft.publisher=Jasmin&amp;rft.aufirst=Claude&amp;rft.aulast=Cl%C3%A9ment&amp;rft.au=Claude%20Cl%C3%A9ment&amp;rft.date=2009-10-30&amp;rft.tpages=253&amp;rft.isbn=978-2-35284-068-8&amp;rft.language=fr'></span>	
+<img src="https://m.media-amazon.com/images/I/71BasG+lvPL._SY342_.jpg"
+alt="Frédéric Chopin, l’âme du piano"
+title="Couverture Frédéric Chopin, l’âme du piano"> 
+Frédéric Chopin, l’âme du piano. Claude Clément, Jasmin, 2009. <a href="https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement"> https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement </a></p>
+</p>
+
+<p>
+	<span class='Z3988' title='url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=urn%3Aisbn%3A978-2-213-02548-3&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Abook&amp;rft.genre=book&amp;rft.btitle=Wolfgang%20Amadeus%20Mozart&amp;rft.place=Paris&amp;rft.publisher=Fayard&amp;rft.aufirst=Jean&amp;rft.aulast=Massin&amp;rft.au=Jean%20Massin&amp;rft.au=Brigitte%20Massin&amp;rft.date=1990-01-01&amp;rft.tpages=1293&amp;rft.isbn=978-2-213-02548-3&amp;rft.language=fr'></span>
+
+<img src="https://m.media-amazon.com/images/I/61-wOI-HZvL._SY385_.jpg"
+alt="Livre Wolfgang Amadeus Mozart"
+title="Couverture Wolfgang Amadeus Mozart">
+Wolfgang Amadeus Mozart, Jean Massin et Brigitte Massin.Fayard,1990. <a href="https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922"> https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922</a>
+
+</p>
+
+<p>
+	<span class='Z3988' title='url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=urn%3Aisbn%3A978-2-414-63720-1&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Abook&amp;rft.genre=book&amp;rft.btitle=33%20compositeurs%20de%20musique%20classique%20m%C3%A9connus&amp;rft.place=N%C3%AEmes&amp;rft.publisher=Edilivre%20-%20Aparis&amp;rft.aufirst=Alexandre&amp;rft.aulast=Nolet&amp;rft.au=Alexandre%20Nolet&amp;rft.date=2024-11-07&amp;rft.tpages=15&amp;rft.isbn=978-2-414-63720-1&amp;rft.language=fr'></span>
+<img src="https://m.media-amazon.com/images/I/81TPNUs00gL._SY385_.jpg"
+alt="Livre 33 compositeurs de musique classique méconnus"
+title="Couverture 33 compositeurs de musique classique méconnus">
+33 compositeurs de musique classique méconnus. Alexandre Nolet, Edilivre-Aparis, 2024. <a href="https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/"> https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/</a>
+</p>
+
 	<h2 id="instruments"> Les instruments de musique</h2>
          <h3 id="cordes"> Les instruments à cordes </h3>
 
