--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <img src="https://m.media-amazon.com/images/I/71BasG+lvPL._SY342_.jpg"
 alt="Frédéric Chopin, l’âme du piano"
 title="Couverture Frédéric Chopin, l’âme du piano"> 
-Frédéric Chopin, l’âme du piano. Claude Clément, Jasmin, 2009. <a href="https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement"> https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement </a></p>
+<b>Frédéric Chopin, l’âme du piano</b>, Claude Clément, Jasmin, 2009. <a href="https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement"> https://www.librairie-compagnie.fr/livre/9782352840688-frederic-chopin-l-ame-du-piano-claude-clement </a></p>
 </p>
 
 <p>
@@ -49,7 +49,7 @@ Frédéric Chopin, l’âme du piano. Claude Clément, Jasmin, 2009. <a href="ht
 <img src="https://m.media-amazon.com/images/I/61-wOI-HZvL._SY385_.jpg"
 alt="Livre Wolfgang Amadeus Mozart"
 title="Couverture Wolfgang Amadeus Mozart">
-Wolfgang Amadeus Mozart, Jean Massin et Brigitte Massin.Fayard,1990. <a href="https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922"> https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922</a>
+<b>Wolfgang Amadeus Mozart</b>, Jean Massin et Brigitte Massin.Fayard,1990. <a href="https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922"> https://www.babelio.com/livres/Massin-Wolfgang-Amadeus-Mozart/77922</a>
 
 </p>
 
@@ -58,7 +58,7 @@ Wolfgang Amadeus Mozart, Jean Massin et Brigitte Massin.Fayard,1990. <a href="ht
 <img src="https://m.media-amazon.com/images/I/81TPNUs00gL._SY385_.jpg"
 alt="Livre 33 compositeurs de musique classique méconnus"
 title="Couverture 33 compositeurs de musique classique méconnus">
-33 compositeurs de musique classique méconnus. Alexandre Nolet, Edilivre-Aparis, 2024. <a href="https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/"> https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/</a>
+<b>33 compositeurs de musique classique méconnus</b>, Alexandre Nolet, Edilivre-Aparis, 2024. <a href="https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/"> https://www.eyrolles.com/Litterature/Livre/33-compositeurs-de-musique-classique-meconnus-9782414637201/</a>
 </p>
 
 	<h2 id="instruments"> Les instruments de musique</h2>
